--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@expo/metro-runtime": "~3.2.3",
     "@expo/vector-icons": "^14.0.3",
+    "@ffmpeg/ffmpeg": "^0.12.10",
+    "@ffmpeg/util": "^0.12.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.1",
     "@fortawesome/free-solid-svg-icons": "^6.2.1",
     "@fortawesome/react-native-fontawesome": "^0.3.0",
@@ -45,12 +47,12 @@
     "react-native": "0.74.5",
     "react-native-dropdown-picker": "^5.4.4",
     "react-native-feather": "^1.1.2",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-web": "~0.19.10",
-    "xpath": "^0.0.33",
-    "react-native-reanimated": "~3.10.1"
+    "xpath": "^0.0.33"
   },
   "devDependencies": {
     "@babel/core": "^7.24.0",
